<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz">History Quiz</string>
    <string name="music">Music</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="score">Score</string>
    <string name="wrong_message">Some Thing Went Wrong..Restart App</string>
    <string name="start_test">START TEST</string>
    <string name="settings">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="zero">0</string>
    <string name="default_seconds">20</string>
    <string name="enter_in_seconds">Enter in seconds</string>
    <string name="sec_description">Enter the number of seconds for the exam</string>
    <string name="_00_20">00:20</string>
    <string name="done">Done</string>
    <string name="main_screen">Main Screen</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="player_1">Player 1</string>
    <string name="shake_the_device_to_go_main_screen">Shake the device to go to main screen</string>
    <string name="post_on_twitter">Post on Twitter</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="skip">Skip</string>
</resources>
