<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sec_description" />

        <EditText
            android:id="@+id/seconds_textbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/_00_20"
            android:ems="3"
            android:hint="@string/enter_in_seconds"
            android:inputType="number" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switch_music"
            android:padding="20dp"
            android:text="@string/music"
            android:textOff="@string/no"
            android:textOn="@string/yes" />

        <TextView
            android:id="@+id/player_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_name" />

        <EditText
            android:id="@+id/player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/enter_your_name"
            android:hint="@string/enter_in_seconds"
            android:inputType="number"
            android:text="@string/player_1" />

        <TextView
            android:id="@+id/textMotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/shake_the_device_to_go_main_screen"
            android:textStyle="italic" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="done"
            android:padding="10dp"
            android:text="@string/done"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>