<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quizTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/quiz"
        android:textAlignment="center"
        android:textColor="@color/title"
        android:textSize="45sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@+id/button_start_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_start_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startTest"
        android:padding="20dp"
        android:text="@string/start_test"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setting"
            android:padding="10dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".05" />

        <Button
            android:id="@+id/button_leaderboard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="leaderboard"
            android:padding="10dp"
            android:text="@string/leaderboard"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>